--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pokedex",
   "version": "0.1.0",
-  "homepage": "https://eternalstay.github.io/PokedexReact/public/index.html",
+  "homepage": "https://eternalstay.github.io/PokedexReact",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
